# Lambda-Actions

./: .gitignore  README.md  pyproject.toml
LambdaC/: Bulk_Convert.py  LambdaC_README.md  Lambda_schema.py  ai_transformer.py  cli.py  internal_model.py  lambdaC.py  requirements.txt  transformer.py
LambdaC/exporters/: fortisoar_exporter.py  xsoar_exporter.py
LambdaC/parsers/: ai_parser.py  fortisoar_parser.py  xsoar_parser.py
LambdaC/samples/: prod_sample_xsoar.yml
LambdaC/validators/: validate_xsoar.py
Playbooks_Repo/fortisoar/: prod_sample_xsoar.json
Playbooks_Repo/lambda/: Enrich_Indicators_Type_All.yml  LA - XSPB0002_-_Block_Domain-Generic_v2.yml.yml  LA - XSPB0004_-_Block_File-Generic_v2.yml.yml  LA - XSPB0006_-_Block_Indicators-Generic_v3.yml.yml  LA - XSPB0007_-_Block_URL-Generic_v2.yml.yml  LA - XSPB0008_-_Containment_Plan.yml.yml  LA - XSPB0011_-_Containment_Plan-Disable_Account.yml.yml  LA - XSPB0012_-_Containment_Plan-Isolate_Device.yml.yml  LA - XSPB0013_-_Containment_Plan-Quarantine_File.yml.yml  LA - XSPB0014_-_Eradication_Plan-Terminate_Process.yml.yml  LA - XSPB0015_-_Isolate_Endpoint-Generic_V2_6_8.yml.yml  LA - XSPB0016_-_Search_And_Block_Software-Generic.yml.yml  LA - XSPB0017_-_Unisolate_Endpoint-Generic.yml.yml  LA - XSPB0025_-_Checkpoint-Block_IP-Append_Group.yml.yml  LA - XSPB0026_-_Checkpoint-Block_IP-Custom_Block_Rule.yml.yml  LA - XSPB0027_-_Checkpoint-Block_URL.yml.yml  LA002-SSO-Password-Spray-Response.yml  XSPB0003 - Block_Email-Generic_v2.yml  (+4 more)
documentations/: Lambda-Actions-Guide.md  Lambda-Schema.yml
(+10 files in other folders)
